--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "js-yaml": "^4.1.0",
     "json-schema-traverse": "^0.4.1",
     "json-stable-stringify-without-jsonify": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
     "kareem": "^2.3.5",
     "levn": "^0.4.1",
     "lodash": "^4.17.21",
