--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
     "name": "develop",
     "version": "1.0.0",
     "description": "",
@@ -203,7 +202,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server/server.js",
-        "develop": "concurrently \"cd server && nodemon server.js \" \"cd client && npm start\"",
+        "develop": "concurrently \"cd server && node server.js  \" \"cd client && npm start\"",
         "install": "cd server && npm i && cd ../client && npm i",
         "seed": "cd server && npm run seed",
         "build": "cd client && npm run build"
@@ -211,5 +210,4 @@
     "keywords": [],
     "author": "Bemnet",
     "license": "MIT"
-
 }
